Fixed main container layout issue

--- a/public/assets/sass/src/base.sass
+++ b/public/assets/sass/src/base.sass
@@ -8,3 +8,6 @@
   right: 0
   background-color: rgba(0,0,0,0.6)
   z-index: 2e9
+
+.main
+  margin-top: 70px
